--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
+
+      - name: Set up Python 3.12
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
+
       - name: Install dependencies
+        working-directory: assignments/assignment-I/fastapi-healthapp
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
+
       - name: Run tests
-        run: pytest
+        working-directory: assignments/assignment-I/fastapi-healthapp
+        run: |
+          pytest -v
