--- a/assignments/assignment-I/fastapi-healthapp/requirements.txt
+++ b/assignments/assignment-I/fastapi-healthapp/requirements.txt
@@ -1,15 +1,25 @@
 annotated-types==0.7.0
 anyio==4.9.0
+certifi==2025.4.26
+cfgv==3.4.0
 click==8.2.0
+distlib==0.3.9
 fastapi==0.115.12
+filelock==3.18.0
 h11==0.16.0
+httpcore==1.0.9
 httptools==0.6.4
+httpx==0.28.1
+identify==2.6.10
 idna==3.10
 iniconfig==2.1.0
+nodeenv==1.9.1
 packaging==25.0
+platformdirs==4.3.8
 pluggy==1.5.0
+pre_commit==4.2.0
 pydantic==2.11.4
-pydantic-settings==2.7.1
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pytest==8.3.5
 python-dotenv==1.1.0
@@ -20,6 +30,6 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 uvicorn==0.34.2
 uvloop==0.21.0
+virtualenv==20.31.2
 watchfiles==1.0.5
 websockets==15.0.1
-httpx
